welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: value unary_! is not a member of Int
while (!dejaFait=nbPas) { recule(); dejaFait=dejaFait+1; }
       ^